# project-swarm-daemon

./: .gitignore  Cargo.toml  Dockerfile  Guiding Doc.md  README.md
.github/workflows/: build.yml
docs/: AI_ADDENDUM.md  API.md  ARCHITECTURE.md  CRYPTO.md  DEVELOPMENT.md  PROTOCOLS.md
src/: crypto.rs  kex.rs  main.rs  store.rs  sync.rs
